[metadata]
name = sso
version = 0.1-RC1-SNAPSHOT
author = Peter Veentjer
author_email = peter_veentjer@scylladb.com
description = The Scylla Stress Orchestrator is Python 3 based framework for running various benchmark tools including cassandra-stress and scylla-bench.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scylladb/scylla-stress-orchestrator
project_urls =
    Bug Tracker = https://github.com/scylladb/scylla-stress-orchestrator/issues
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src